# precinct

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: settings.yml
.github/workflows/: ci.yml
benches/: store.rs
examples/: README.md  geo_regions.rs  glove_concepts.rs  recall_gap.rs  wordnet_boxes.rs
scripts/: fetch_glove.sh  fetch_natural_earth.sh  fetch_wordnet_boxes.sh
src/: distance.rs  index.rs  io.rs  lib.rs  region.rs  store.rs
tests/: region_nearest.rs
