[package]
name = "precinct"
version = "0.6.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
rust-version = "1.89"
description = "Approximate nearest-neighbor search over region embeddings"
repository = "https://github.com/arclabs561/precinct"
documentation = "https://docs.rs/precinct"
license = "MIT OR Apache-2.0"
keywords = ["ann", "box-embedding", "region-search", "nearest-neighbor", "containment"]
categories = ["algorithms", "science"]
exclude = ["benches/", "data/", ".github/"]

[workspace]

[dependencies]
thiserror = "2.0"

# Point ANN backend (optional -- enables RegionIndex)
vicinity = { version = "0.8", optional = true, default-features = false, features = ["hnsw"] }
serde = { version = "1", features = ["derive"], optional = true }
segstore = { version = "0.2", optional = true }
durability = { version = "0.6", optional = true }

[dev-dependencies]
rand = "0.9"
# Concept-region construction from real word vectors (examples/glove_concepts).
clump = "0.5"
# GeoJSON parsing for the geographic-region example (examples/geo_regions).
serde_json = "1"

[features]
default = ["index"]
index = ["dep:vicinity"]
# Optional serde derives on region types (persist/reload a region).
serde = ["dep:serde"]
# `store` adds an updatable, durable multi-segment region-ANN index
# (`store::UpdatableIndex`) via segstore.
store = ["index", "serde", "dep:segstore", "dep:durability"]
